<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:dslv="http://schemas.android.com/apk/res-auto"
    xmlns:com.woxthebox="http://schemas.android.com/tools">

    <SwitchPreference
        android:defaultValue="true"
        android:key="example_switch"
        android:summary="@string/pref_description_social_recommendations"
        android:title="@string/pref_title_social_recommendations" />

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_display_name"
        android:inputType="textCapWords"
        android:key="example_text"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_display_name" />

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:defaultValue="-1"
        android:entries="@array/pref_example_list_titles"
        android:entryValues="@array/pref_example_list_values"
        android:key="example_list"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_add_friends_to_messages" />
    <com.skydoves.colorpickerpreference.ColorPickerPreference
        android:key="BackgroundColorPickerPreference"
        android:title="@string/background_Color"
        android:summary="@string/changes_background_color"
        app:preference_dialog_title="@string/Background_ColorPickerDialog"
        app:preference_dialog_positive="@string/confirm"
        app:preference_dialog_negative="@string/cancel"
        app:preference_palette="@drawable/palette"
        app:preference_selector="@drawable/wheel"
        app:default_color="@color/colorPrimary"/>

    <com.skydoves.colorpickerpreference.ColorPickerPreference
        android:key="ToolbarColorPickerPreference"
        android:title="@string/Toolbar_Color"
        android:summary="@string/changes_toolbar_color"
        app:preference_dialog_title="Toolbar ColorPickerDialog"
        app:preference_dialog_positive="@string/confirm"
        app:preference_dialog_negative="@string/cancel"
        app:preference_palette="@drawable/palette"
        app:preference_selector="@drawable/wheel"
        app:default_color="@color/colorPrimary"/>

</PreferenceScreen>
