<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- A 'parent' preference, which enables/disables child preferences (below)
         when checked/unchecked. -->
    <SwitchPreference
        android:defaultValue="true"
        android:key="notifications_new_message"
        android:title="@string/pref_title_new_message_notifications" />

    <!-- Allows the user to choose a ringtone in the 'notification' category. -->
    <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
    <!-- NOTE: RingtonePreference's summary should be set to its value by the activity code. -->
    <RingtonePreference
        android:defaultValue="content://settings/system/notification_sound"
        android:dependency="notifications_new_message"
        android:key="notifications_new_message_ringtone"
        android:ringtoneType="notification"
        android:title="@string/pref_title_ringtone" />

    <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
    <SwitchPreference
        android:defaultValue="true"
        android:dependency="notifications_new_message"
        android:key="notifications_new_message_vibrate"
        android:title="@string/pref_title_vibrate" />
    <MultiSelectListPreference
        android:key="categorie"
        android:title="@string/notification"
      />
    <com.skydoves.colorpickerpreference.ColorPickerPreference
        android:key="BackgroundColorPickerPreference"
        android:title="@string/background_Color"
        android:summary="@string/changes_background_color"
        app:preference_dialog_title="@string/Background_ColorPickerDialog"
        app:preference_dialog_positive="@string/confirm"
        app:preference_dialog_negative="@string/cancel"
        app:preference_palette="@drawable/palette"
        app:preference_selector="@drawable/wheel"
        app:default_color="@color/colorPrimary"/>

    <com.skydoves.colorpickerpreference.ColorPickerPreference
        android:key="ToolbarColorPickerPreference"
        android:title="@string/Toolbar_Color"
        android:summary="@string/changes_toolbar_color"
        app:preference_dialog_title="Toolbar ColorPickerDialog"
        app:preference_dialog_positive="@string/confirm"
        app:preference_dialog_negative="@string/cancel"
        app:preference_palette="@drawable/palette"
        app:preference_selector="@drawable/wheel"
        app:default_color="@color/colorPrimary"/>

</PreferenceScreen>
